# authly-pal

./: .dockerignore  Cargo.toml  Dockerfile  justfile
src/: aws.rs  encryption_disabled.rs  k8s.rs  main.rs
