[package]
name = "authly-pal"
description = "Authly Platform Abstraction Layer"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
aws-config = "1"
aws-sdk-kms = "1"
axum = "0.8"
hex = { version = "0.4", features = ["serde"] }
hexhex = "1"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = "0.98"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
